# osteon

./: .env.example  .gitignore  OVERVIEW.md  PHASE0.md  README.md  STANDARDIZATION.md  conftest.py  orchestrator.py  pyproject.toml
.claude/: launch.json
common/: __init__.py  contracts.py  errors.py  ladder.py  llm.py  mcp_base.py  settings.py  trace.py
fixtures/: dummy_bone.stl  example_case.json  example_case_2.json  example_case_3.json  example_case_4.json  example_case_5.json  example_implant_candidate.json  example_placement_plan.json  example_stress_report.json
gateway/: guardrails.yaml  mcp-registry.yaml  routing.yaml
scripts/: keepalive.py  make_femur.py  make_implant.py
split_a_localization/: SETUP.md  __init__.py  blender_render.py  engine.py  mcp_server.py  model.py  test_acceptance.py
split_a_localization/fixtures/: .gitkeep  placement_plan_test_case_01.json  placement_plan_test_case_02.json  placement_plan_test_case_03.json  placement_plan_test_case_04.json  placement_plan_test_case_05.json
split_b_synthesis/: SETUP.md  __init__.py  engine.py  mcp_server.py  test_acceptance.py
split_b_synthesis/fixtures/: .gitkeep  implant_candidate_test_case_01.json  implant_candidate_test_case_01.stl  implant_candidate_test_case_02.json  implant_candidate_test_case_02.stl  implant_candidate_test_case_03.json  (+5 more)
split_c_evaluation/: SETUP.md  __init__.py  engine.py  fea.py  guardrails.py  heatmap_render.py  mcp_server.py  test_acceptance.py
tests/: smoke_test.py
webapp/: app.py  blender_combo.py  blender_heatmap.py  implants_gen.py  make_demo_renders.py
(+10 files in other folders)
