[project]
name = "osteon"
version = "0.1.0"
description = "Resilient AI agent that designs orthopedic implants in Blender."
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "openai>=1.30",
    "numpy",
    "mcp",
]

[project.optional-dependencies]
# bpy is not reliably pip-installable; Split B uses the Blender binary (blender --background).
# rtree backs trimesh's ray/proximity spatial index (Split A thickness probing, engine.py).
localization = ["open3d", "trimesh", "scikit-learn", "torch", "pydicom", "rtree"]
synthesis = ["trimesh", "pymeshlab", "cma"]
evaluation = ["trimesh", "sfepy", "pycalculix"]
dev = ["pytest", "ruff", "black"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
